--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ padding: 0;
             }
 
             .MainBody{
-                /* margin-top: 500px;
-                margin-left: 700px; */
+               
                 width: 100%;
                 height: 100%;
                 position: relative;
@@ -113,3 +112,116 @@ padding: 0;
             #Reset:hover{
                 border: 5px solid darkblue;
             }
+@media screen and(max-width:480px){
+    #gamearea{
+                max-width: 300px;
+                max-height: 400px;
+                border: 2px solid whitesmoke;
+                border-radius: 20px;
+                position: absolute;
+                margin-top: 15%;
+                
+    }
+}
+@media screen and (max-width:480px){
+    body{
+        background-image: url('page-background - grid.jpg') ;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+}
+@media screen and (max-width:480px){
+    #seltag{
+        border: 3px solid rgb(36, 36, 141);
+        border-radius: 8px;
+        padding: 20px;
+        cursor: pointer;
+        margin-top:40px;
+        margin-left: 40px;
+        position: absolute;
+        top: 60px;
+    }
+    #lock{
+        
+        border: 3px solid rgb(36, 36, 141);
+        border-radius: 8px;
+        padding: 20px;
+        cursor: pointer;
+        position: absolute;
+        top: 150px;
+        margin-left: 40px;
+        
+       
+    }
+    #para{
+        font-family: sans-serif;
+        font-size: 28px;
+        color: white;
+        padding-left: 0;
+        position: absolute;
+        top: 20px;
+        margin-left: 40px;
+    }
+
+    #seltag:hover, #lock:hover{
+        border:5px solid darkblue;
+        box-shadow: 2px ;
+        position: absolute;
+
+    }
+    #Reset{
+        border: 3px solid rgb(36, 36, 141);
+        border-radius: 8px;
+        padding: 20px;
+        cursor: pointer;
+        position: absolute;  
+        margin-top: 244px; 
+        margin-left: 40px;
+        
+    }
+
+    #scoreheading{
+        font-family: sans-serif;
+        font-size: 22px;
+        color: white;
+        padding-left: 0;
+        position: absolute;
+    }
+
+    #sels{
+        font-family: sans-serif;
+        font-size: 18px;
+        color: white;
+        padding-left: 0;
+        position: absolute;
+    }
+    #selscoreval{
+        font-family: sans-serif;
+        font-size: 18px;
+        color: white;
+        padding-left: 0;
+        position: absolute;
+
+    }
+    #comps{
+        font-family: sans-serif;
+        font-size: 18px;
+        color: white;
+        padding-left: 0;
+        position: absolute;
+
+    }
+    #compscoreval{
+        font-family: sans-serif;
+        font-size: 18px;
+        color: white;
+        padding-left: 0;
+        position: absolute;
+
+    }
+
+    #Reset:hover{
+        border: 5px solid darkblue;
+    }
+}
